--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,9 @@ build image:
 
   script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
-    - docker build -t $CI_REGISTRY_IMAGE .
-    - docker push $CI_REGISTRY_IMAGE
+    - IMAGE_TAG="$CI_REGISTRY/doragasu/docker-sgdk:$CI_COMMIT_TAG"
+    - VERSION=$(echo $CI_COMMIT_TAG | cut -f1 -d '-')
+    - MW_FLAG=$(echo $CI_COMMIT_TAG | cut -f2 -d '-')
+    - test "$MW_FLAG" = "mw" && MW_ARG='--build-arg ENABLE_MEGAWIFI=y'
+    - docker build --build-arg SGDK_RELEASE=$VERSION $MW_ARG -t $IMAGE_TAG .
+    - docker push $IMAGE_TAG
