--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
               tag_suffix: '-mw'
             - arg: n
               tag_suffix: ''
-          bank_switching:
+          bank_switch:
             - arg: y
               tag_suffix: '-bs'
             - arg: n
@@ -53,8 +53,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest,${{ env.REGISTRY }}/${{ github.repository }}:${{ env.SGDK_RELEASE }}${{ matrix.mw.tag_suffix }}${{ matrix.bank_switching.tag_suffix }},${{ env.REGISTRY }}/${{ github.repository }}:${{ github.run_number }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest,${{ env.REGISTRY }}/${{ github.repository }}:${{ env.SGDK_RELEASE }}${{ matrix.mw.tag_suffix }}${{ matrix.bank_switch.tag_suffix }},${{ env.REGISTRY }}/${{ github.repository }}:${{ github.run_number }}
           build-args: |
             "SGDK_RELEASE=${{ env.SGDK_RELEASE }}"
             "ENABLE_MEGAWIFI=${{ matrix.mw.arg }}"
-            "ENABLE_BANK_SWITCHING=${{ matrix.bank_switching.arg }}"
+            "ENABLE_BANK_SWITCH=${{ matrix.bank_switch.arg }}"
